metrics-cache/src/section/snapshots/metrics_cache__section__pod__tests__kube_pod_container_specs_v1.snap
---
source: metrics-cache/src/section/pod.rs
expression: "KubePodContainerSpecsV1::from_pod(&pod)"
---
{
  "containers": {
    "nginx": {
      "image_pull_policy": "Always"
    },
    "sidecar": {
      "image_pull_policy": "IfNotPresent"
    }
  }
}
