metrics-cache/src/section/snapshots/metrics_cache__section__pod__tests__kube_pod_lifecycle_v1-2.snap
---
source: metrics-cache/src/section/pod.rs
expression: "KubePodLifecycleV1::new(\"Running\")"
---
{
  "phase": "running"
}
