metrics-cache/src/section/snapshots/metrics_cache__section__pod__tests__kube_start_time_v1.snap
---
source: metrics-cache/src/section/pod.rs
expression: section
---
{
  "start_time": 1718825025.0
}
